--- a/AspNetCoreMVC-SchoolSystem/Views/_ViewImports.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AspNetCoreMVC_SchoolSystem
 @using AspNetCoreMVC_SchoolSystem.Models
+@using AspNetCoreMVC_SchoolSystem.DTO;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
