Subjects added to School application with own database table subjects

--- a/AspNetCoreMVC-SchoolSystem/Views/Subjects/Index.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/Subjects/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@using AspNetCoreMVC_SchoolSystem.DTO
-@model IEnumerable<StudentDTO>
-<h1>Students</h1>
+@model IEnumerable<SubjectDTO>
+<h1>Subjects</h1>
 <a asp-action="Create" class="btn btn-success" >Create</a>
 @foreach (var item in Model) {
     <div class="border border-1 border-dark p-2 ">
-        <h5>@item.FirstName @item.LastName</h5>
+        <h5>@item.Name</h5>
         Id: @item.Id
-        <p>Date of Birth: "@item.DateOfBirth.ToString()"</p>
+        <br />
         <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
         <form method="post">
             <button type="submit" class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Delete</button>
