--- a/AspNetCoreMVC-SchoolSystem/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Students</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Subjects" asp-action="Index">Subjects</a>
+                        </li>
                     </ul>
                 </div>
             </div>
