--- a/AspNetCoreMVC-SchoolSystem/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Grades" asp-action="Index">Grades</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        </li>
                     </ul>
                 </div>
             </div>
