--- a/AspNetCoreMVC-SchoolSystem/Views/_ViewImports.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using AspNetCoreMVC_SchoolSystem
 @using AspNetCoreMVC_SchoolSystem.Models
 @using AspNetCoreMVC_SchoolSystem.DTO;
+@using AspNetCoreMVC_SchoolSystem.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
