--- a/AspNetCoreMVC-SchoolSystem/Views/Home/Privacy.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/Home/Privacy.cshtml
@@ -3,4 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Admin username: esteban password: Skola123*</p>
+<p>Chief username: chief password: Skola123*</p>
+<p>Parent username: jendyTata password: Skola123*</p>
+<p>Teacher username: ucitel password: Skola123*</p>
+
