--- a/AspNetCoreMVC-SchoolSystem/Views/Account/Login.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/Account/Login.cshtml
@@ -9,7 +9,7 @@
     </div>
     <div>
         <label asp-for="Password"></label>
-        <input asp-for="Password" class="form-control" />
+        <input type="password" asp-for="Password" class="form-control" />
     </div>
     <div>
         Remember me?&nbsp;<input type="checkbox" asp-for="RememberMe" />
