--- a/AspNetCoreMVC-SchoolSystem/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreMVC-SchoolSystem/Views/Shared/_Layout.cshtml
@@ -25,7 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-                        <li class="nav-item">
+                        @if (User.Identity.IsAuthenticated && User.IsInRole("Student")) {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Grades" asp-action="MyGrades">Grades</a>
+                            </li>
+                        }
+                        @if (User.Identity.IsAuthenticated && (User.IsInRole("Janitor")||User.IsInRole("Admin")||User.IsInRole("Teacher"))){<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Students" asp-action="Index">Students</a>
                         </li>
                         <li class="nav-item">
@@ -33,8 +38,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Grades" asp-action="Index">Grades</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated && User.IsInRole("Admin")) {
+                        </li>}
+
+                        @if (User.Identity.IsAuthenticated && (User.IsInRole("Janitor")||User.IsInRole("Admin"))) {
 
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
